concord_macros/tests/dsl/fail/fail_rate_limit_cost_exceeds_max.stderr
error: rate_limit bucket cost must not exceed the window max
  --> tests/dsl/fail/fail_rate_limit_cost_exceeds_max.rs:11:26
   |
11 |                     cost 10
   |                          ^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_rate_limit_cost_exceeds_max.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
